<resources>
    <string name="app_name">android测试</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings1">退出</string>
    <string name="menu_settings2">Settings2</string>
    <string name="menu_settings3">Settings3</string>
    <string name="netWork_error">网络错误,请检查网络</string>
    <string name="getpicture_internet">GetPictureFromInternet</string>
    <string name="dialogActivityButton">DialogActivity按钮2</string>
    <string name="picture_path">The Path of the picture:</string>
    <string name="default_picture_address">http://192.168.46.44:8080/First_web_server/getImage.png?id=1</string>
    <string name="showPicture">Show Picture</string>
    <string name="uploadPicture">上传图片</string>
    <string name="getPictureError">Get Picture error!</string>
    <string name="source_prompt">Chose City</string>
    <string name="dialogButton">ProgressDialogButton</string>
    <string name="defineDialogButton">Dialo种类</string>
    <string name="sparcelable">sparcelable</string>
    <string name="serializable">Serializable</string>
    <string name="parcelable">Parcelable</string>
    <string name="listViewButton">listView</string>
    <string name="ExpandableListView">ExpandableListView</string>
    <string name="listViewActivityInfo">listViewActivityInfo</string>
    <string name="add">add</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="query">query</string>
    <string name="queryTheCursor">queryTheCursor</string>
    <string name="myImageLoader">ImageLoader</string>
    <string name="AudioPlay">AudioPlay</string>
    <string name="no_such_apk">apk不存在</string>
    <string name="AudioText">音频录音回放测试</string>
    <string name="AudioOpen">打开音频设备</string>
    <string name="AudioClose">关闭音频设备</string>
    <string name="Mute">静音</string>
    <string name="PlayAssert">播放Assert文件</string>
    <string name="NoMute">恢复</string>
    <string name="ReturnButton">返回</string>
    <string name="serviceTitle">服务测试</string>
    <string name="serviceButton">service测试</string>
    <string name="serviceStart">startService</string>
    <string name="serviceStop">stopService</string>
    <string name="bindServer">bindServer</string>
    <string name="unbindServer">unbindServer</string>
    <string name="asyncService">asyncService</string>
    <string name="getCount">获取链接次数</string>
    <string name="broadCastTitle">broadcast测试</string>
    <string name="broadCastNormalSend">发送普通广播消息</string>
    <string name="broadCastOrderedSend">发送有序广播消息</string>
    <string name="broadCastActivityButton">broadCast测试</string>
    <string name="contentproviderTitle">contentProvider测试</string>
    <string name="contentProviderButton">contentProvider</string>
    <string name="addContent">添加数据</string>
    <string name="deleteContent">清除数据</string>
    <string name="updateContent">更新数据</string>
    <string name="queryContent">查询数据</string>
    <string name="wifiTitle">wifi网卡测试</string>
    <string name="startWifi">启动手机的wifi网卡</string>
    <string name="stopWifi">关闭手机的wifi网卡</string>
    <string name="checkWifi">检查当前wifi网卡状态</string>
    <string name="NetWorkButtonTitle">网络编程</string>
    <string name="WebCodeViewer">获取网页代码</string>
    <string name="webCodeViewer_path">The Path of the webCodeViewer:</string>
    <string name="default_webCodeViewer_address">http://192.168.1.101:8080/ServerForPicture/zhanglong.jsp</string>
    <string name="showWebView">Show WebView</string>
    <string name="MultithreadingDownloading">多线程下载</string>
    <string name="MultipleThreadContinuableDownLoadButtonTitle">多线程断点续传下载</string>
    <string name="MultipleThreadContinuableDownLoadTitle">多线程断点续传下载</string>
    <string name="HttpPost">HttpPost</string>
    <string name="HttpGet">HttpGet</string>
    <string name="DefaultMultipleThreadContinuableDownLoadPath">http://192.168.1.101:8080/ServerForPicture/love.mp3</string>
    <string name="MultipleThreadContinuableDownLoadStart">Start Downloading</string>
    <string name="MultipleThreadContinuableDownLoadStop">Stop Downloading</string>
    <string name="MultipleThreadContinuableDownLoadSuccess">Downloading Completed Successfully</string>
    <string name="MultipleThreadContinuableDownLoadError">Downloading Error</string>
    <string name="NoSdcard">There is no SDCard or not allow to write</string>
    <string name="openWebPage">打开网页</string>
    <string name="openWebView">webView</string>
    <string name="default_webpage">www.baidu.com</string>
    <string name="go">Enter</string>
    <string name="updateapk">在线更新apk</string>
    <string name="dlg_prompt">提示</string>
    <string name="username">"姓名"</string>
    <string name="password">"密码"</string>
    <string name="action">"登录"</string>
    <string name="cancel">"取消"</string>
    <string name="ok">确认</string>
    <string name="loadTitle">登录</string>
    <string name="ExitMessage">退出确认</string>
    <string name="loading_info">正在加载...</string>
    <string name="loading_dialog_button_title">加载对话框</string>
    <string name="RemoteCalls_button_title">远程调用</string>
    <string name="Get_RemoteCalls_Info">获取远程调用的信息</string>
    <string name="RemoteCalls_Play_title">play</string>
    <string name="RemoteCalls_info">获取的信息为:</string>
    <string name="viewPager_button_title">滑屏</string>
    <string name="exit_dialog_title">退出应用</string>
    <string name="tv_direct">电视直播</string>
    <string name="tv_interactive">互动电视 </string>
    <string name="tv_live">TV生活</string>
    <string name="movie_world">影视天地</string>
    <string name="video">视频通讯</string>
    <string name="app_world">应用天地</string>
    <string name="click_enter">点击进入</string>
    <string name="tip">提示</string>
    <string name="dlg_quit">退出</string>
    <string name="dlg_cancel">取消</string>
    <string name="exit_confim">是否要退出应用?</string>
    <string name="user_account">用户账户</string>
    <string name="system_settings">系统设置</string>
    <string name="about_software">关于软件</string>
    <string name="fragment_preference">"preference"</string>
    <string name="toapk">启动另一个apk</string>
    <string name="UI">UI</string>
    <string name="date_time_title">日期和时间测试</string>
    <string name="date_time">时间和日期</string>
    <string name="app_manager">app管理</string>
    <string name="date_title">显示日期</string>
    <string name="date_button">Date</string>
    <string name="time_title">显示时间</string>
    <string name="time_button">Time</string>
    <string name="next">Next</string>
    <string name="theme_dialog_title">dialog种类</string>
    <string name="inline_preferences">In-line preferences</string>
    <string name="dialog_based_preferences">Dialog-based preferences</string>
    <string name="launch_preferences">Launch preferences</string>
    <string name="preference_attributes">Preference attributes</string>
    <string name="title_checkbox_preference">Checkbox preference</string>
    <string name="summary_checkbox_preference">This is a checkbox</string>
    <string name="title_switch_preference">Switch preference</string>
    <string name="summary_switch_preference">This is a switch</string>
    <string name="summary_switch_preference_yes_no">This is a switch with custom text</string>
    <string name="title_edittext_preference">Edit text preference</string>
    <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
    <string name="title_list_preference">List preference</string>
    <string name="summary_list_preference">An example that uses a list dialog</string>
    <string name="dialog_title_list_preference">Choose one</string>
    <string name="title_screen_preference">Screen preference</string>
    <string name="summary_screen_preference">Shows another screen of preferences</string>
    <string name="title_next_screen_toggle_preference">Toggle preference</string>
    <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
    <string name="title_intent_preference">Intent preference</string>
    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
    <string name="title_parent_preference">Parent checkbox preference</string>
    <string name="summary_parent_preference">This is visually a parent</string>
    <string name="title_child_preference">Child checkbox preference</string>
    <string name="summary_child_preference">This is visually a child</string>
    <string name="fragment_preferences">Preference/7. Fragment</string>
    <string name="edittextpreference"></string>
    <string name="exit">再按一次退出程序</string>
    <string name="tab_sd">SD卡</string>
    <string name="tab_remote">远程管理</string>
    <string name="file_explorer">发通知</string>
    <string name="tabs_1_tab_1">tab1</string>
    <string name="tabs_1_tab_2">tab2</string>
    <string name="tabs_1_tab_3">tab3</string>
    <string name="contacts">contacts</string>
    <string name="sendKey">sendKey</string>
    <string name="myView">myView</string>
    <string name="set_ip_button">设置静态wifi地址</string>
    <string name="login_password_notip"></string>
    <string name="login_password_tip">登录密码</string>
    <string name="login_id">手机号/卡(账)号/用户名</string>
    <string name="letter_bar_star">★</string>
    <string name="round_image">圆角</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="user_app">USER_APP</string>
    <string name="system_app">SYSTEM_APP</string>
    <string name="title_activity_uri">UriActivity</string>
    <string name="dummy_button">测试按钮</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_book_provider">BookProviderActivity</string>
    <string name="title_activity_motion_event">MotionEventActivity</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_failed">发送失败</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="sharewechat_title">来自融e联的分享</string>
    <string name="wechatuninstall_tip">您尚未安装微信</string>
    <string name="share_text_null">内容不能为空</string>
    <string name="wechatregisterAppFail">微信注册失败</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="title_activity_learning">LearningActivity</string>
</resources>