<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->


<!-- This is a primitive example showing the different types of preferences available. -->


<!--
PreferenceScreen 持久化设置界面的顶级容器，代表一屏，里面可以嵌套屏幕，嵌套的时候可以点击跳转到另外一屏 
PreferenceCategory 当前屏的分组容器，说白了，就是为了划分组而已
CheckBoxPreference，ListPreference，EditTextPreference等等组件。这些都是常见的对应上述的选择标签、列表标签、编辑标签。
上述组件都有titile,summary,key属性。title标题描述，summary：详细描述，key：保存SharedPreferences时候的键
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/inline_preferences">
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="checkbox_preference1"
            android:summary="@string/summary_checkbox_preference"
            android:title="@string/title_checkbox_preference" />

        <SwitchPreference
            android:key="checkbox_preference2"
            android:summary="@string/summary_switch_preference"
            android:title="@string/title_switch_preference" />
        <SwitchPreference
            android:key="checkbox_preference"
            android:summary="@string/summary_switch_preference_yes_no"
            android:switchTextOff="NO"
            android:switchTextOn="YES"
            android:title="@string/title_switch_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/dialog_based_preferences">
        <EditTextPreference
            android:dialogTitle="@string/dialog_title_edittext_preference"
            android:key="edittext_preference"
            android:summary="@string/summary_edittext_preference"
            android:title="@string/title_edittext_preference" />

        <ListPreference
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:key="list_preference"
            android:summary="@string/summary_list_preference"
            android:title="@string/title_list_preference" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/launch_preferences">

        <!--
             This PreferenceScreen tag serves as a screen break (similar to page break
             in word processing). Like for other preference types, we assign a key
             here so it is able to save and restore its instance state.
        -->
        <PreferenceScreen
            android:key="screen_preference"
            android:summary="@string/summary_screen_preference"
            android:title="@string/title_screen_preference">

            <!-- You can place more preferences here that will be shown on the next screen. -->

            <CheckBoxPreference
                android:key="next_screen_checkbox_preference"
                android:summary="@string/summary_next_screen_toggle_preference"
                android:title="@string/title_next_screen_toggle_preference" />
        </PreferenceScreen>
        <PreferenceScreen
            android:summary="@string/summary_intent_preference"
            android:title="@string/title_intent_preference">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://www.android.com" />
        </PreferenceScreen>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_attributes">
        <CheckBoxPreference
            android:key="parent_checkbox_preference"
            android:summary="@string/summary_parent_preference"
            android:title="@string/title_parent_preference" />

        <!-- The visual style of a child is defined by this styled theme attribute. -->
        <CheckBoxPreference
            android:dependency="parent_checkbox_preference"
            android:key="child_checkbox_preference"
            android:layout="?android:attr/preferenceLayoutChild"
            android:summary="@string/summary_child_preference"
            android:title="@string/title_child_preference" />
    </PreferenceCategory>

</PreferenceScreen>