<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loadbk"
    android:orientation="vertical">

    <TextView
        android:id="@+id/date_time_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:layout_centerHorizontal="true"
        android:text="@string/date_time_title"
        android:textSize="@dimen/titlesize" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@id/date_time_title">

        <TextView
            android:id="@+id/date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/date_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_button"
            android:onClick="getDate" />

        <TextView
            android:id="@+id/time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/time_title" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_button"
            android:onClick="getTime" />
    </LinearLayout>

</RelativeLayout>
