<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/AudioOpen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="openAudio"
            android:text="@string/AudioOpen" />

        <Button
            android:id="@+id/AudioClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closeAudio"
            android:text="@string/AudioClose" />

        <Button
            android:id="@+id/muteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="mute"
            android:text="@string/Mute" />
    </LinearLayout>

    <SeekBar
        android:id="@+id/PlayVol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:max="15"
        android:progress="6"
        android:secondaryProgress="15"></SeekBar>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playAssert"
            android:text="@string/PlayAssert" />
    </LinearLayout>
</LinearLayout>