<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/remote_call_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loadbk"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/RemoteCalls_button_title"
        android:textColor="@color/red"
        android:textSize="@dimen/server_image_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getRemoteCallsInfo"
            android:text="@string/Get_RemoteCalls_Info"
            android:textColor="@color/red" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getRemoteCallsPlay"
            android:text="@string/RemoteCalls_Play_title"
            android:textColor="@color/red" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RemoteCalls_info"
            android:textColor="@color/red" />

        <TextView
            android:id="@+id/RemoteCallsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red" />
    </LinearLayout>

    <com.ISHello.MyUI.VerticalSeekBar
        android:id="@+id/ISSlideBar"
        android:layout_width="wrap_content"
        android:layout_height="200dip"
        android:layout_gravity="right" />

</LinearLayout>
